<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.rahul.moviesearch.model.MovieDetailsResult" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:orientation="vertical"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                style="@style/textStyle_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:text= "@string/director" />

            <TextView
                style="@style/textStyle_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.director}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                style="@style/textStyle_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:text="@string/writer" />

            <TextView
                style="@style/textStyle_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.writer}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                style="@style/textStyle_bold_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:text="@string/actors" />

            <TextView
                style="@style/textStyle_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.actors}" />
        </LinearLayout>


    </LinearLayout>
</layout>
